--- a/sky/compositor/BUILD.gn
+++ b/sky/compositor/BUILD.gn
@@ -4,10 +4,16 @@
 
 source_set("compositor") {
   sources = [
-    "layer_tree.cc",
-    "layer_tree.h",
     "layer.cc",
     "layer.h",
+    "layer_tree.cc",
+    "layer_tree.h",
+    "picture_state.cc",
+    "picture_state.h",
+    "picture_table.cc",
+    "picture_table.h",
+    "saturating_counter.cc",
+    "saturating_counter.h",
   ]
 
   deps = [
