--- a/sky/packages/updater/pubspec.yaml
+++ b/sky/packages/updater/pubspec.yaml
@@ -5,5 +5,7 @@ description: The autoupdater for flutter
 homepage: http://flutter.io
 dependencies:
   mojo: ^0.0.21
+  sky: ^0.0.25
+  sky_services: ^0.0.48
 environment:
   sdk: '>=1.12.0 <2.0.0'
