--- a/sky/packages/updater/BUILD.gn
+++ b/sky/packages/updater/BUILD.gn
@@ -19,7 +19,7 @@ action("updater") {
 
   args = [
     "--compiler", rebase_path("$sky_snapshot_dir/sky_snapshot", root_build_dir),
-    "--package-root", rebase_path("packages", root_build_dir),
+    "--package-root", rebase_path("//sky/packages/workbench/packages", root_build_dir),
     "--snapshot", rebase_path(snapshot, root_build_dir),
     "--main", rebase_path(main_dart, root_build_dir),
   ]
