--- a/sky/packages/updater/pubspec.yaml
+++ b/sky/packages/updater/pubspec.yaml
@@ -1,11 +1,16 @@
-name: sky_updater
+name: updater
 version: 0.0.1
 author: Chromium Authors <sky-dev@googlegroups.com>
 description: The autoupdater for flutter
 homepage: http://flutter.io
 dependencies:
-  mojo: ^0.0.21
-  sky: ^0.0.25
-  sky_services: ^0.0.26
+  mojo: '>=0.1.0 <0.2.0'
+  sky: any
+  sky_services: any
+dependency_overrides:
+  sky:
+    path: ../sky
+  sky_services:
+    path: ../sky_services
 environment:
   sdk: '>=1.12.0 <2.0.0'
