--- a/mojo/services/mojo_services.gni
+++ b/mojo/services/mojo_services.gni
@@ -40,6 +40,7 @@ mojo_services = [
   "//mojo/services/surfaces/interfaces",
   "//mojo/services/terminal/interfaces",
   "//mojo/services/tracing/interfaces",
+  "//mojo/services/ui/views/interfaces",
   "//mojo/services/url_response_disk_cache/interfaces",
   "//mojo/services/vanadium/security/interfaces",
   "//mojo/services/view_manager/interfaces",
