--- a/sky/engine/bindings/BUILD.gn
+++ b/sky/engine/bindings/BUILD.gn
@@ -37,6 +37,10 @@ source_set("bindings") {
     "//sky/engine/wtf",
   ]
 
+  if (is_mac) {
+    deps += [ "//sky/engine/bindings/objc" ]
+  }
+
   # On iOS (device), precompiled snapshots contain the instruction buffer.
   # Generation of the same requires all application specific script code to be
   # specified up front. In such cases, there can be no updater or generic
