--- a/sky/engine/tonic/BUILD.gn
+++ b/sky/engine/tonic/BUILD.gn
@@ -15,6 +15,8 @@ source_set("tonic") {
     "dart_converter.h",
     "dart_dependency_catcher.cc",
     "dart_dependency_catcher.h",
+    "dart_direct_wrappable.cc",
+    "dart_direct_wrappable.h",
     "dart_error.cc",
     "dart_error.h",
     "dart_exception_factory.cc",
