Report Flutter widgets to iOS accessibility API
This registers a SemanticsListener with the Dart VM
so that the shell gets called back whenever the layout
tree changes.  The listener rebuilds the accessibility
element array that iOS uses to drive its accessibility
interface.

Still TODO:
* finer-grained semantics of widget types
* gesture reporting such as swiping / scrolling
* proper relayout reporting

--- a/sky/shell/BUILD.gn
+++ b/sky/shell/BUILD.gn
@@ -272,6 +272,8 @@ if (is_android) {
         "platform/ios/flutter_touch_mapper.h",
         "platform/ios/flutter_touch_mapper.mm",
         "platform/ios/main_ios.mm",
+        "platform/ios/semantics_listener_impl.h",
+        "platform/ios/semantics_listener_impl.mm",
         "platform/ios/public/Flutter.h",
         "platform/ios/public/FlutterDartProject.h",
         "platform/ios/public/FlutterMacros.h",
@@ -294,11 +296,13 @@ if (is_android) {
       deps = [
         "//mojo/edk/base_edk",
         "//mojo/edk/system",
+        "//skia",
         "//sky/services/activity",
         "//sky/services/dynamic:embedder",
         "//sky/services/editing",
         "//sky/services/media",
         "//sky/services/ns_net",
+        "//sky/services/semantics",
         "//sky/services/vsync",
         "//ui/gl",
         ":common",
