Initial take at a native unit test harness.
Steps to add a unit test target:

* Create a target using the "test" template in "testing/test.gni"
* Add your test files as sources to this target.
* Add the "//sky:sky_test" target as a dep.
* Depend on the new target from somewhere (usually root BUILD.gn)

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -15,6 +15,12 @@ group("default") {
       "//sky/shell:flutter_framework",
     ]
   }
+
+  if (is_mac) {
+    deps += [
+      "//sky/shell:shell_test",
+    ]
+  }
 }
 
 group("dist") {
