--- a/sky/engine/core/BUILD.gn
+++ b/sky/engine/core/BUILD.gn
@@ -38,13 +38,14 @@ source_set("libraries") {
 
 source_set("prerequisites") {
   deps = [
-    ":libraries",
     "//sky/engine/platform",
   ]
 
-  forward_dependent_configs_from = [ ":libraries" ]
+  public_deps = [
+    ":libraries",
+  ]
 
-  direct_dependent_configs = [
+  public_configs = [
     "//sky/engine:config",
     "//sky/engine:inside_blink",
     "//build/config/compiler:wexit_time_destructors",
