--- a/sky/engine/core/BUILD.gn
+++ b/sky/engine/core/BUILD.gn
@@ -23,6 +23,7 @@ source_set("libraries") {
     "//mojo/public/platform/dart:mojo_internal_impl",
     "//skia",
     "//sky/engine/wtf",
+    "//third_party:jpeg",
     "//third_party/iccjpeg",
     "//third_party/libpng",
     "//third_party/qcms",
