Link with the Android support library to get access to the ANativeWindow methods.

--- a/sky/shell/BUILD.gn
+++ b/sky/shell/BUILD.gn
@@ -156,8 +156,9 @@ if (is_android) {
     ]
 
     ldflags = [
-      "-lGLESv2",
+      "-landroid",
       "-lEGL",
+      "-lGLESv2",
     ]
   }
 
