Add a simple countdown latch to //synchronization.

--- a/synchronization/BUILD.gn
+++ b/synchronization/BUILD.gn
@@ -4,6 +4,8 @@
 
 source_set("synchronization") {
   sources = [
+    "latch.cc",
+    "latch.h",
     "pipeline.cc",
     "pipeline.h",
     "semaphore.cc",
