Wire up to mojo::tracing::* infrastructure.

--- a/glue/BUILD.gn
+++ b/glue/BUILD.gn
@@ -17,6 +17,11 @@ source_set("glue") {
     "//lib/ftl",
     "//mojo/public/cpp/environment",
     "//mojo/public/cpp/system",
+    "//mojo/services/tracing/cpp",
+  ]
+
+  public_deps = [
+    "//mojo/public/c",
   ]
 
   if (is_fuchsia) {
