--- a/lib/ui/BUILD.gn
+++ b/lib/ui/BUILD.gn
@@ -264,6 +264,7 @@ if (enable_unittests) {
       "compositing/scene_builder_unittests.cc",
       "hooks_unittests.cc",
       "painting/image_decoder_no_gl_unittests.cc",
+      "painting/image_decoder_no_gl_unittests.h",
       "painting/image_dispose_unittests.cc",
       "painting/image_encoding_unittests.cc",
       "painting/image_generator_registry_unittests.cc",
