--- a/.ci.yaml
+++ b/.ci.yaml
@@ -393,7 +393,7 @@ targets:
 
   - name: Mac mac_clang_tidy
     recipe: engine_v2/engine_v2
-    presubmit: false
+    presubmit: true
     timeout: 120
     properties:
       config_name: mac_clang_tidy
