--- a/testing/scenario_app/android/app/src/main/AndroidManifest.xml
+++ b/testing/scenario_app/android/app/src/main/AndroidManifest.xml
@@ -4,7 +4,8 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:allowBackup="false"
+        android:fullBackupContent="extraction_config_11_and_below.xml"
+        android:dataExtractionRules="extraction_config.xml"
         android:label="Scenarios App"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
