Pretty sure this does not work, but proof of concept.

--- a/impeller/renderer/backend/vulkan/BUILD.gn
+++ b/impeller/renderer/backend/vulkan/BUILD.gn
@@ -39,6 +39,8 @@ impeller_component("vulkan") {
     "command_buffer_vk.h",
     "command_encoder_vk.cc",
     "command_encoder_vk.h",
+    "command_pool_recycler_vk.cc",
+    "command_pool_recycler_vk.h",
     "command_pool_vk.cc",
     "command_pool_vk.h",
     "compute_pass_vk.cc",
