--- a/impeller/renderer/backend/vulkan/BUILD.gn
+++ b/impeller/renderer/backend/vulkan/BUILD.gn
@@ -10,6 +10,7 @@ impeller_component("vulkan_unittests") {
   sources = [
     "blit_command_vk_unittests.cc",
     "command_encoder_vk_unittests.cc",
+    "command_pool_vk_unittests.cc",
     "context_vk_unittests.cc",
     "pass_bindings_cache_unittests.cc",
     "resource_manager_vk_unittests.cc",
