--- a/impeller/renderer/backend/vulkan/BUILD.gn
+++ b/impeller/renderer/backend/vulkan/BUILD.gn
@@ -15,6 +15,7 @@ impeller_component("vulkan_unittests") {
     "resource_manager_vk_unittests.cc",
     "test/mock_vulkan.cc",
     "test/mock_vulkan.h",
+    "test/mock_vulkan_unittests.cc",
   ]
   deps = [
     ":vulkan",
