--- a/.ci.yaml
+++ b/.ci.yaml
@@ -56,7 +56,7 @@ platform_properties:
       os: Mac-12
       $flutter/osx_sdk : >-
         {
-          "sdk_version": "15a5219j"
+          "sdk_version": "14e300c"
         }
     dimensions:
       mac_model: "Macmini8,1|Macmini9,1"
@@ -446,8 +446,11 @@ targets:
         ]
       $flutter/osx_sdk : >-
         {
-          "sdk_version": "15a5219j"
+          "sdk_version": "14e300c"
         }
+      device_type: null
+      cpu: arm64
+      os: Mac-13
     drone_dimensions:
       - os=Mac-12
 
@@ -467,8 +470,11 @@ targets:
       config_name: mac_ios_engine
       $flutter/osx_sdk : >-
         {
-          "sdk_version": "15a5219j"
+          "sdk_version": "14e300c"
         }
+      device_type: null
+      cpu: arm64
+      os: Mac-13
     drone_dimensions:
       - os=Mac-12
       - cpu=x86
