try android 34 for emulator tests

--- a/.ci.yaml
+++ b/.ci.yaml
@@ -86,9 +86,13 @@ targets:
     enabled_branches:
       - main
     recipe: engine_v2/builder
-    presubmit: false
+    presubmit: true # THIS LINE IS JUST TO CONFIRM THE TESTS PASS. REMOVE!
     properties:
       config_name: linux_android_emulator
+      dependencies: >-
+        [
+          {"dependency": "android_virtual_device", "version": "version:34"}
+        ]
     timeout: 60
 
   - name: Linux builder_cache
