make avd_version a string, because the bot told me to

--- a/.ci.yaml
+++ b/.ci.yaml
@@ -89,7 +89,7 @@ targets:
     presubmit: true # THIS LINE IS JUST TO CONFIRM THE TESTS PASS. REMOVE!
     properties:
       config_name: linux_android_emulator
-      avd_version: 34
+      avd_version: "34"
     timeout: 60
 
   - name: Linux builder_cache
