--- a/fml/BUILD.gn
+++ b/fml/BUILD.gn
@@ -8,6 +8,8 @@ import("//flutter/testing/testing.gni")
 
 source_set("fml") {
   sources = [
+    "affinity.cc",
+    "affinity.h",
     "ascii_trie.cc",
     "ascii_trie.h",
     "backtrace.h",
