--- a/flow/BUILD.gn
+++ b/flow/BUILD.gn
@@ -99,10 +99,7 @@ source_set("flow") {
   deps = [ "//third_party/skia" ]
 
   if (impeller_supports_rendering) {
-    deps += [
-      "//flutter/impeller",
-      "//flutter/impeller/typographer/backends/skia:typographer_skia_backend",
-    ]
+    deps += [ "//flutter/impeller" ]
   }
 }
 
