[Impeller] `vk::CommandPool` resets via `ResourceManager` (#45654)
Fixes https://github.com/flutter/flutter/issues/133198.

Major changes:

- `CommandPoolVK` is now created indirectly through `CommandPoolRecyclerVK`.
- Via destructor, `CommandPoolVK` resets on a background thread via `ResourceManager`.
- Removed all of the code trying to reuse/reset individual command buffers (no longer needed).
- After every frame, the current/active command pool is recycled.

---

_Tests secured._

--- a/impeller/renderer/backend/vulkan/BUILD.gn
+++ b/impeller/renderer/backend/vulkan/BUILD.gn
@@ -10,6 +10,7 @@ impeller_component("vulkan_unittests") {
   sources = [
     "blit_command_vk_unittests.cc",
     "command_encoder_vk_unittests.cc",
+    "command_pool_vk_unittests.cc",
     "context_vk_unittests.cc",
     "fence_waiter_vk_unittests.cc",
     "pass_bindings_cache_unittests.cc",
