--- a/tools/pkg/git_repo_tools/pubspec.yaml
+++ b/tools/pkg/git_repo_tools/pubspec.yaml
@@ -40,6 +40,8 @@ dependency_overrides:
     path: ../../../../third_party/dart/pkg/meta
   path:
     path: ../../../../third_party/dart/third_party/pkg/path
+  platform:
+    path: ../../../../third_party/pkg/platform
   process:
     path: ../../../../third_party/pkg/process
   process_fakes:
