--- a/tools/pkg/git_repo_tools/pubspec.yaml
+++ b/tools/pkg/git_repo_tools/pubspec.yaml
@@ -34,6 +34,8 @@ dependency_overrides:
     path: ../../../../third_party/dart/pkg/async_helper
   expect:
     path: ../../../../third_party/dart/pkg/expect
+  file:
+    path: ../../../../third_party/pkg/file/packages/file
   litetest:
     path: ../../../testing/litetest
   meta:
