--- a/.ci.yaml
+++ b/.ci.yaml
@@ -159,6 +159,7 @@ targets:
     timeout: 60
 
   - name: Linux Fuchsia
+    bringup: true
     recipe: engine/engine
     properties:
       build_fuchsia: "true"
@@ -216,10 +217,10 @@ targets:
       - web_sdk/**
 
   - name: Linux linux_fuchsia
-    bringup: true
     recipe: engine_v2/engine_v2
     timeout: 60
     properties:
+      add_recipes_cq: "true"
       release_build: "true"
       config_name: linux_fuchsia
     drone_dimensions:
