--- a/tools/pkg/git_repo_tools/pubspec.yaml
+++ b/tools/pkg/git_repo_tools/pubspec.yaml
@@ -30,6 +30,8 @@ dev_dependencies:
   smith: any
 
 dependency_overrides:
+  async:
+    path: ../../../../third_party/dart/third_party/pkg/async
   async_helper:
     path: ../../../../third_party/dart/pkg/async_helper
   expect:
