--- a/tools/pkg/git_repo_tools/pubspec.yaml
+++ b/tools/pkg/git_repo_tools/pubspec.yaml
@@ -30,10 +30,14 @@ dev_dependencies:
   smith: any
 
 dependency_overrides:
+  args:
+    path: ../../../../third_party/dart/third_party/pkg/args
   async:
     path: ../../../../third_party/dart/third_party/pkg/async
   async_helper:
     path: ../../../../third_party/dart/pkg/async_helper
+  collection:
+    path: ../../../../third_party/dart/third_party/pkg/collection
   expect:
     path: ../../../../third_party/dart/pkg/expect
   file:
