[Impeller] use metal performance shaders for blur on iOS.

--- a/impeller/renderer/backend/metal/BUILD.gn
+++ b/impeller/renderer/backend/metal/BUILD.gn
@@ -53,5 +53,5 @@ impeller_component("metal") {
     "//flutter/fml",
   ]
 
-  frameworks = [ "Metal.framework" ]
+  frameworks = [ "Metal.framework", "UIKit.framework" ]
 }
