--- a/impeller/entity/BUILD.gn
+++ b/impeller/entity/BUILD.gn
@@ -161,6 +161,8 @@ impeller_component("entity") {
     "contents/filters/border_mask_blur_filter_contents.h",
     "contents/filters/color_filter_contents.cc",
     "contents/filters/color_filter_contents.h",
+    "contents/filters/apple_filter_kernel.mm",
+    "contents/filters/apple_filter_kernel.h",
     "contents/filters/color_matrix_filter_contents.cc",
     "contents/filters/color_matrix_filter_contents.h",
     "contents/filters/filter_contents.cc",
@@ -267,6 +269,8 @@ impeller_component("entity") {
   }
 
   deps = [ "//flutter/fml" ]
+
+  frameworks = ["MetalPerformanceShaders.framework"]
 }
 
 impeller_component("entity_unittests") {
