--- a/impeller/renderer/backend/metal/BUILD.gn
+++ b/impeller/renderer/backend/metal/BUILD.gn
@@ -53,5 +53,8 @@ impeller_component("metal") {
     "//flutter/fml",
   ]
 
-  frameworks = [ "Metal.framework", "UIKit.framework" ]
+  frameworks = [
+    "Metal.framework",
+    "UIKit.framework",
+  ]
 }
