--- a/.ci.yaml
+++ b/.ci.yaml
@@ -241,6 +241,7 @@ targets:
 
   - name: Linux linux_clang_tidy
     recipe: engine_v2/engine_v2
+    presubmit: false
     timeout: 120
     properties:
       config_name: linux_clang_tidy
