Prepare fuchsia script to coexist with v1 and v2 of fuchsia builders. (#46126)
Prepares fuchsia scripts to work correctly when both v1 and v2 of the fuchsia build are running in their respective environments.

Bug: https://github.com/flutter/flutter/issues/126461
Bug: https://github.com/flutter/flutter/issues/135189

[C++, Objective-C, Java style guides]: https://github.com/flutter/engine/blob/main/CONTRIBUTING.md#style

--- a/.ci.yaml
+++ b/.ci.yaml
@@ -161,6 +161,7 @@ targets:
   - name: Linux Fuchsia
     recipe: engine/engine
     properties:
+      add_recipes_cq: "true"
       build_fuchsia: "true"
       fuchsia_ctl_version: version:0.0.27
       # ensure files from pre-production Fuchsia SDK tests are purged from cache
