--- a/.ci.yaml
+++ b/.ci.yaml
@@ -101,6 +101,16 @@ targets:
         }
     timeout: 60
 
+  - name: Linux mac_android_aot_engine
+    recipe: engine_v2/engine_v2
+    timeout: 120
+    properties:
+      add_recipes_cq: "true"
+      release_build: "true"
+      config_name: mac_android_aot_engine
+    drone_dimensions:
+      - os=Linux
+
   - name: Mac mac_clang_tidy
     recipe: engine_v2/engine_v2
     timeout: 120
