added buildtime swap of the canvas

--- a/impeller/BUILD.gn
+++ b/impeller/BUILD.gn
@@ -8,7 +8,9 @@ import("tools/impeller.gni")
 config("impeller_public_config") {
   include_dirs = [ ".." ]
 
-  defines = []
+  if (!defined(defines)) {
+    defines = []
+  }
 
   if (impeller_debug) {
     defines += [ "IMPELLER_DEBUG=1" ]
