--- a/impeller/aiks/BUILD.gn
+++ b/impeller/aiks/BUILD.gn
@@ -4,12 +4,17 @@
 
 import("../tools/impeller.gni")
 
+config("impeller_canvas_recorder_config") {
+  defines = [ "IMPELLER_TRACE_CANVAS" ]
+}
+
 impeller_component("aiks") {
   sources = [
     "aiks_context.cc",
     "aiks_context.h",
     "canvas.cc",
     "canvas.h",
+    "canvas_type.h",
     "color_filter.cc",
     "color_filter.h",
     "color_source.cc",
@@ -35,6 +40,15 @@ impeller_component("aiks") {
   ]
 
   deps = [ "//flutter/fml" ]
+
+  if (impeller_trace_canvas) {
+    sources += [
+      "canvas_recorder.h",
+      "trace_serializer.cc",
+      "trace_serializer.h",
+    ]
+    public_configs = [ ":impeller_canvas_recorder_config" ]
+  }
 }
 
 impeller_component("aiks_playground") {
@@ -56,14 +70,7 @@ impeller_component("aiks_playground") {
 }
 
 impeller_component("canvas_recorder") {
-  sources = [
-    "canvas_recorder.h",
-    "trace_serializer.h",
-    "trace_serializer.cc",
-  ]
-  deps = [
-    ":aiks",
-  ]
+  deps = [ ":aiks" ]
 }
 
 impeller_component("aiks_unittests") {
@@ -73,15 +80,14 @@ impeller_component("aiks_unittests") {
     "aiks_unittests.cc",
     "canvas_recorder_unittests.cc",
     "canvas_unittests.cc",
-    "trace_serializer_unittests.cc",
     "testing/context_mock.h",
     "testing/context_spy.cc",
     "testing/context_spy.h",
+    "trace_serializer_unittests.cc",
   ]
   deps = [
     ":aiks",
     ":aiks_playground",
-    ":canvas_recorder",
     "//flutter/impeller/geometry:geometry_asserts",
     "//flutter/impeller/golden_tests:golden_playground_test",
     "//flutter/impeller/playground:playground_test",
@@ -89,6 +95,14 @@ impeller_component("aiks_unittests") {
     "//flutter/impeller/typographer/backends/stb:typographer_stb_backend",
     "//flutter/testing:testing_lib",
   ]
+
+  if (!impeller_trace_canvas) {
+    sources += [
+      "canvas_recorder.h",
+      "trace_serializer.cc",
+      "trace_serializer.h",
+    ]
+  }
 }
 
 impeller_component("aiks_unittests_golden") {
