--- a/impeller/tools/impeller.gni
+++ b/impeller/tools/impeller.gni
@@ -22,8 +22,8 @@ declare_args() {
       (is_linux || is_win || is_android) && target_os != "fuchsia"
 
   # Whether the Vulkan backend is enabled.
-  impeller_enable_vulkan =
-      (is_linux || is_win || is_android) && target_os != "fuchsia"
+  impeller_enable_vulkan = (is_linux || is_win || is_android ||
+                            enable_unittests) && target_os != "fuchsia"
 
   # Whether to use a prebuilt impellerc.
   # If this is the empty string, impellerc will be built.
