--- a/shell/testing/BUILD.gn
+++ b/shell/testing/BUILD.gn
@@ -3,6 +3,15 @@
 # found in the LICENSE file.
 
 import("//build/fuchsia/sdk.gni")
+import("//flutter/impeller/tools/impeller.gni")
+import("//flutter/shell/gpu/gpu.gni")
+
+shell_gpu_configuration("tester_gpu_configuration") {
+  enable_software = true
+  enable_gl = true
+  enable_vulkan = true
+  enable_metal = false
+}
 
 executable("testing") {
   output_name = "flutter_tester"
@@ -35,6 +44,26 @@ executable("testing") {
     "//third_party/dart/runtime/bin:dart_io_api",
     "//third_party/skia",
   ]
+
+  if (impeller_supports_rendering) {
+    deps += [
+      ":tester_gpu_configuration",
+      "//flutter/impeller",
+      "//third_party/swiftshader",
+    ]
+
+    if (is_win) {
+      libs = [ "$root_out_dir/vk_swiftshader.dll" ]
+    } else if (is_mac) {
+      libs = [ "$root_out_dir/libvk_swiftshader.dylib" ]
+    } else if (is_linux) {
+      libs = [ "$root_out_dir/libvk_swiftshader.so" ]
+    } else {
+      assert(
+          false,
+          "Only Windows, Mac, and Linux are supported for this target with Impeller.")
+    }
+  }
 
   metadata = {
     entitlement_file_path = [ "flutter_tester" ]
