--- a/shell/common/BUILD.gn
+++ b/shell/common/BUILD.gn
@@ -81,6 +81,8 @@ source_set("common") {
   sources = [
     "animator.cc",
     "animator.h",
+    "base64.cc",
+    "base64.h",
     "context_options.cc",
     "context_options.h",
     "display_manager.cc",
@@ -293,6 +295,7 @@ if (enable_unittests) {
 
     sources = [
       "animator_unittests.cc",
+      "base64_unittests.cc",
       "context_options_unittests.cc",
       "dl_op_spy_unittests.cc",
       "engine_unittests.cc",
